# EnvironmentStation

./: .cproject  .gitignore  .mxproject  .project  BuildRunner.sh  CMakeLists.txt  EnvironmentStation.ioc  Flash.sh  TODOList.md
Core/: CMakeLists.txt
Core/Inc/: peripheralsDefinition.h  stm32CubeMXGenerated.h  stm32l4xx_it.h
Core/Src/: main.c  main.cpp  stm32CubeMXGenerated.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Devices/: CMakeLists.txt  LPS25HB.cpp  LPS25HB.hpp  LPS25HBBase.cpp  LPS25HBBase.hpp  LPS25HB_Async.cpp  LPS25HB_Async.hpp  Measurement.hpp
Drivers/: CMakeLists.txt
Peripherals/: CMakeLists.txt  Config.hpp
Peripherals/ADC/HAL/: Adc.hpp  CMakeLists.txt
Peripherals/GPIO/: IGpioInput.hpp  IGpioOutput.hpp
Peripherals/GPIO/HAL/: CMakeLists.txt  GpioInput.hpp  GpioOutput.cpp  GpioOutput.hpp
Peripherals/GPIO/RegisterLevel/: CMakeLists.txt  GpioAlternate.hpp  GpioAnalog.hpp  GpioBase.hpp  GpioEnums.hpp  GpioInput.hpp  GpioOutput.hpp  GpioRegisterLevelBase.hpp  IGpio.hpp
Peripherals/I2C/: I2CBase.hpp  I2CBase_IT.hpp
Peripherals/I2C/HAL/: CMakeLists.txt  I2C.cpp  I2C.hpp  I2C_IT.cpp  I2C_IT.hpp
Peripherals/Timer/HAL/: CMakeLists.txt
Peripherals/UART/: IUart.hpp  LineParser.hpp
Peripherals/UART/HAL/: CMakeLists.txt  Uart.hpp  UartIT.cpp  UartIT.hpp
Peripherals/UART/RegisterLevel/: CMakeLists.txt  ToDoList.md  Uart.hpp  UartBase.hpp  UartLegacy.hpp
Peripherals/UART/Utils/: RingBuffer.hpp
UnitTests/: CMakeLists.txt  LPS25HB_Tests.hpp  RingBuffer_Tests.hpp  mainTests.cpp
cmake/: configuration.cmake  toolchain-arm-gcc.cmake
