cmake_minimum_required(VERSION 3.28)
project(EnvironmentStation C CXX ASM)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_EXTENSIONS OFF)

add_compile_options(${CORE_FLAGS})
add_link_options(${CORE_FLAGS})

add_subdirectory(Drivers)
add_subdirectory(Peripherals)
add_subdirectory(Core)
